syntax = "proto3";
package orders;


service Order{
  rpc ProcessOrder(OrderParams) returns (OrderResponse) {}
  rpc CancelOrder(OrderId) returns (OrderCanceledResponse) {}
  rpc UpdateOrderState(StateAndOrderParams) returns (OrderUpdatedStateResponse) {}
}

// request params... 

message OrderParams{
  repeated ReceiverContacts receiverContacts = 1;
  repeated Goods Goods = 2;
  repeated DestinationAddress destinationAddress = 3;
}

message StateAndOrderParams{
  // basically merge params of order identifier and State of the order into one object.
  string orderId = 1;
  string state = 2;
}

message OrderId {
  string orderId = 1;
}

message Goods {
  string product_name = 1;
  string product_description = 2;
  string product_price = 3;
  string quantity = 4;
}

message ReceiverContacts{
  string phone_number = 1;
  string email_address = 2;
  optional string gender = 3;
}

message DestinationAddress {
  // Full info about destination Address..
  string Country = 1;
  string City = 2;
  string zip_code = 3;
  string Street = 4;
  optional string District = 5;
  string house = 6;
}

// responses

message OrderResponse{
  string orderId = 1;
  string status = 2;
}

message OrderCanceledResponse{
  string status = 1;
}
